# HamyarPaygahPy

./: .devskim.json  .gitignore  .grype.yaml  .hadolint.yaml  .hound.yml  .jscpd.json  .ls-lint.yml  .markdown-link-check.json  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  .shellcheckrc  .trivyignore  .vale.ini  .yamllint.yml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  DISCLAIMER.rst  HamyarPaygah.spec  LICENSE  README.rst  SECURITY.md  SECURITY.rst  codecov.yml  lychee.toml  noxfile.py  project_notes.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: build-tests.yml  checkov.yml  codeql.yml  codspeed.yml  compability-coverage.yml  compatibility-coverage.yml  constraints.txt  dependency-review.yml  dev_release_executable.yml  dusti-lock.yml  kics.yml  labeler.yml  links.yml  mega-linter.yml  mega-mega-linter.yml  release_executable.yml  safety-cli.yml  scorecard.yml
docs/: conf.py  contributing.rst  faq.rst  index.rst  license.rst  requirements.txt
src/HamyarPaygahPy/: __init__.py
src/hamyar_paygah/: __init__.py  core.py  main.py  missions_list.py  missions_list_ui.py  models.py  new_main.py  parsers.py  server_config.py  services.py  utils.py
src/hamyar_paygah/app/: __init__.py  paths.py
src/hamyar_paygah/config/: __init__.py  config_manager.py  options_config.py  server_config.py
src/hamyar_paygah/controllers/: __init__.py  main_menu_controller.py
src/hamyar_paygah/controllers/dialogs/: __init__.py  server_config_dialog_controller.py
src/hamyar_paygah/controllers/widgets/: __init__.py  mission_details_tab_controller.py  personnel_analyzer_tab_controller.py  region_analyzer_tab_controller.py
src/hamyar_paygah/localization/: __init__.py  base.py  en.py  fa.py  language_manager.py
src/hamyar_paygah/models/: mission_details_model.py  mission_model.py  region_model.py
src/hamyar_paygah/models/mission_details_submodels/: __init__.py  consumable_model.py  drug_model.py  information_model.py  location_and_emergency_model.py  medical_actions_model.py  medical_center_model.py  medical_history_model.py  mission_result_model.py  pupils_lungs_heart_model.py  symptoms_model.py  times_and_distances_model.py  trauma_types_model.py  vital_signs_model.py
src/hamyar_paygah/new_ui/: __init__.py  color_widget.py  main_menu.py  main_menu.ui  qt_widget_sample.py  qt_widget_tutorial.py  test_qt.py  test_qt_2.py
src/hamyar_paygah/new_ui/dialogs/: __init__.py  server_config_dialog.py  server_config_dialog.ui
src/hamyar_paygah/new_ui/widgets/: __init__.py  analysis_page.py  analysis_page.ui  mission_details_tab.py  mission_details_tab.ui  personnel_analyzer_tab.py  personnel_analyzer_tab.ui  personnel_page.py  personnel_page.ui  region_analyzer_tab.py  region_analyzer_tab.ui
src/hamyar_paygah/services/: __init__.py  mission_details_service.py  missions_list_service.py  parsers.py
src/hamyar_paygah/translations/: __init__.py
src/hamyar_paygah/translations/dialogs/: __init__.py  server_config_dialog.qm  server_config_dialog.ts
src/hamyar_paygah/ui/: __init__.py  main_window.py  missions_list_window.py  options_window.py
src/hamyar_paygah/ui/dialogs/: __init__.py  server_config_dialog.py
src/hamyar_paygah/ui/widgets/: missions_list_filters.py  missions_list_table.py
src/hamyar_paygah/utils/: __init__.py  date_utils.py  math_utils.py  qt_utils.py  text_utils.py  xml_utils.py
src/hamyar_paygah/view_models/: __init__.py  consumables_table_model.py  mission_table_model.py
src/hamyar_paygah_py/: __init__.py
styles/config/ignore/: spell_ignore.txt
tests/: test_benchmarks.py  test_config_manager.py  test_core.py  test_init.py  test_qt.py
tests/test_config/: test_config_manager.py  test_server_config.py
tests/test_services/: test_mission_details_service.py
tests/test_utils/: test_date_utils.py  test_math_utils.py  test_qt_utils.py  test_text_utils.py  test_xml_utils.py
